syntax = "proto3";
package category;

import "google/protobuf/empty.proto";

service CategoryService {
  rpc ListCategories (google.protobuf.Empty) returns (CategoriesReply);
  rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryReply);
}

message Category {
  int32 id = 1;
  string name = 2;
}

message CreateCategoryRequest {
  string name = 1;
}

message CreateCategoryReply {
  string message = 1;
}

message CategoriesReply {
  repeated Category categories = 1;
}